Clean up and extract the unit tests into a common test file.

--- a/test-tokenizer.html
+++ b/test-tokenizer.html
@@ -15,8 +15,9 @@
 		(c) qfox.nl<br/>
 		<script src="unicodecategories.js"></script>
 		<script src="Tokenizer.js"></script>
+		<script src="Tests.js"></script>
 		<script>
-			Tokenizer.testSuite();
+			Tokenizer.testSuite(Tests);
 		</script>
 	</body>
 </html>
