--- a/test-parser.html
+++ b/test-parser.html
@@ -18,8 +18,9 @@
 		<script src="unicodecategories.js"></script>
 		<script src="Tokenizer.js"></script>
 		<script src="ZeParser.js"></script>
+		<script src="Tests.js"></script>
 		<script>
-			ZeParser.testSuite();
+			ZeParser.testSuite(Tests);
 		</script>
 	</body>
 </html>
