Fixed case for files

--- a/test-parser.html
+++ b/test-parser.html
@@ -18,7 +18,7 @@
 		<script src="unicodecategories.js"></script>
 		<script src="Tokenizer.js"></script>
 		<script src="ZeParser.js"></script>
-		<script src="Tests.js"></script>
+		<script src="tests.js"></script>
 		<script>
 			ZeParser.testSuite(Tests);
 		</script>
