--- a/test-tokenizer.html
+++ b/test-tokenizer.html
@@ -15,7 +15,7 @@
 		(c) qfox.nl<br/>
 		<script src="unicodecategories.js"></script>
 		<script src="Tokenizer.js"></script>
-		<script src="Tests.js"></script>
+		<script src="tests.js"></script>
 		<script>
 			Tokenizer.testSuite(Tests);
 		</script>
